<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="domain.com.projekti.EditUserActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_weight="0.8"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    tools:layout_constraintBottom_creator="1"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintTop_creator="1"
    android:weightSum="1">

    <TextView
        android:id="@+id/eu_tv_old_pword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_pword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/eu_et_old_pword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_old_pword"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/eu_tv_pword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_pword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/eu_et_pword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_edit_pword"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/eu_tv_cpword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_cpword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/eu_et_cpword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_edit_cpword"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/eu_tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/eu_et_desc"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:hint="@string/hint_edit_desc"
        android:inputType="text" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <Button
            android:id="@+id/eu_btn_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/editBtn"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>

