<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="domain.com.projekti.MainActivity"
    android:weightSum="2"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loggedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/tv_tasks_header"
                android:textAlignment="center"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:background="@drawable/border">

            <ListView
                android:id="@+id/myListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="visible" />
            <TextView
                android:id="@+id/main_tv_no_tasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_tasks"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tipsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/main_tv_login_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logged_as"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/main_tv_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_scroll"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/main_tv_tip_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_free"
                android:textColor="@color/GREEN" />

            <TextView
                android:id="@+id/main_tv_tip_reserved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_reserved"
                android:textColor="@color/YELLOW" />

            <TextView
                android:id="@+id/main_tv_tip_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_started"
                android:textColor="@color/TURQOISE" />

            <TextView
                android:id="@+id/main_tv_tip_stopped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_stopped"
                android:textColor="@color/GRAY" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/loggedOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:visibility="gone">


        <TextView
            android:id="@+id/main_tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_string"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>



</LinearLayout>
